--- a/about-us.html
+++ b/about-us.html
@@ -634,15 +634,15 @@ a {
                       <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-phone"></span></div>
                       <div class="unit-body">
                         <ul class="list-0">
-                          <li><a class="link-default" href="tel:+91 9906531735"> +91 9906531735</a></li>
-                          <li><a class="link-default" href="tel:+91 7051203505">+91 7051203505 </a></li>
+                          <li><a class="link-default" style="color: black;" href="tel:+91 9906531735"> +91 9906531735</a></li>
+                          <li><a class="link-default" style="color: black;" href="tel:+91 7051203505">+91 7051203505 </a></li>
                       </ul>
                         </ul>
                       </div>
                     </article>
                     <article class="unit align-items-center">
                       <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-map-marker"></span></div>
-                      <div class="unit-body"><a class="link-default" href="tel:#">7 Square Mall <br> Hyderpora, Srinagar
+                      <div class="unit-body"><a class="link-default" style="color: black;" href="tel:#">7 Square Mall <br> Hyderpora, Srinagar
                       </a></div>
                     </article><a class="button button-gray-bordered button-winona" href="contacts.html">Request a call</a>
                   </div>
@@ -805,15 +805,15 @@ a {
             <div class="col-md-10 col-lg-6 wow-outer">
               <!-- Profile Creative-->
               <article class="profile-creative wow slideInLeft" data-wow-delay=".2s">
-                <figure class="profile-creative-figure"><img class="profile-creative-image" src="images/sandy1.jpg" alt="" width="270" height="273"/>
+                <figure class="profile-creative-figure"><img class="profile-creative-image" src="images/akki.jpeg" alt="" width="270" height="273"/>
                 </figure>
                 <div class="profile-creative-main">
-                  <h5 class="profile-creative-title"><a href="#">Sandy Chauhan</a></h5>
-                  <p class="profile-creative-position">Writer/Director</p>
+                  <h5 class="profile-creative-title"><a href="#">Aquib Aquib</a></h5>
+                  <p class="profile-creative-position">Designer</p>
                   <div class="profile-creative-contacts">
                     <!-- <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:+91 7710182001">+91 7710182001</a></div> -->
                   </div>
-                  <p style="color: white;">Mr. Sandy is a renowned director with extensive experience in the media industry. With a wealth of knowledge and a proven track record, he has been a driving force behind numerous successful projects. </p>
+                  <p style="color: white;">Mr. Aquib is a renowned designer with extensive experience in the media industry. With a wealth of knowledge and a proven track record, he has been a driving force behind numerous successful projects. </p>
                 </div>
               </article>
             </div>
@@ -835,15 +835,16 @@ a {
             <div class="col-md-10 col-lg-6 wow-outer">
               <!-- Profile Creative-->
               <article class="profile-creative wow slideInLeft" data-wow-delay=".2s">
-                <figure class="profile-creative-figure"><img class="profile-creative-image" src="images/owais.jpg" alt="" width="270" height="273"/>
+                <figure class="profile-creative-figure" style="opacity: 0;"><img class="profile-creative-image" src="images/owais.jpg" alt="" width="270" height="273"/>
                 </figure>
                 <div class="profile-creative-main">
-                  <h5 class="profile-creative-title"><a href="#">Owais Reshi</a></h5>
-                  <p class="profile-creative-position">Producer</p>
+                  <h5 class="profile-creative-title"><a href="#">
+                    Danish Javed Dar</a></h5>
+                  <p class="profile-creative-position">Senior Photographer</p>
                   <div class="profile-creative-contacts">
                     <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:+91 9149830299">+91 9149830299</a></div>
                   </div>
-                  <p style="color: white;">Mr. Owais Reshi is recognized as one of the most talented individuals in the industry, known for delivering excellent results and establishing remarkable records. With a proven track record of success. </p>
+                  <p style="color: white;">Mr. Danish Javed Dar is recognized as one of the most talented individuals in the industry, known for delivering excellent results and establishing remarkable records. </p>
                 </div>
               </article>
             </div>
