--- a/contacts.html
+++ b/contacts.html
@@ -39,30 +39,30 @@
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle="#rd-navbar-nav-wrap-1"><span></span></button>
                   <!-- RD Navbar Brand--><a class="rd-navbar-brand" href="index.html"><img src="images/whiteshadow.jpg" alt="" width="151" height="44" srcset="images/whiteshadow.jpg 2x"/></a>
                 </div>
-                <div class="rd-navbar-collapse">
+                <div class="rd-navbar-collapse" >
                   <button class="rd-navbar-collapse-toggle rd-navbar-fixed-element-1" data-rd-navbar-toggle="#rd-navbar-collapse-content-1"><span></span></button>
                   <div class="rd-navbar-collapse-content" id="rd-navbar-collapse-content-1">
                     <article class="unit align-items-center">
                       <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-phone"></span></div>
                       <div class="unit-body">
                         <ul class="list-0">
-                          <li><a class="link-default" href="tel:+91 9906531735"> +91 9906531735</a></li>
-                          <li><a class="link-default" href="tel:+91 7051203505">+91 7051203505 </a></li>
+                          <li><a class="link-default" style="color: black;" href="tel:+91 9906531735"> +91 9906531735</a></li>
+                          <li><a class="link-default" style="color: black;"  href="tel:+91 7051203505">+91 7051203505 </a></li>
                         </ul>
                       </div>
                     </article>
                     <article class="unit align-items-center">
                       <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-map-marker"></span></div>
-                      <div class="unit-body"><a class="link-default" href="tel:#">7 Square Mall <br> Hyderpora, Srinagar
+                      <div class="unit-body"><a class="link-default" style="color: black;" href="tel:#">7 Square Mall <br> Hyderpora, Srinagar
                       </a></div>
                       <!-- <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-map-marker"></span></div> -->
                       <!-- <div class="unit-body"><a class="link-default" href="tel:#">2130 Fulton Street <br> San Diego, CA 94117-1080</a></div> -->
-                    </article><a class="button button-gray-bordered button-winona" href="contacts.html">Request a call</a>
+                    </article><a class="button button-gray-bordered button-winona"  href="contacts.html">Request a call</a>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="rd-navbar-main-outer">
+            <div class="rd-navbar-main-outer" style="background-color: black;">
               <div class="rd-navbar-main">
                 <div class="rd-navbar-nav-wrap" id="rd-navbar-nav-wrap-1">
                   <!-- RD Navbar Nav-->
@@ -86,7 +86,7 @@
         </div>
       </header>
       <!-- Breadcrumbs -->
-      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url(images/bing.jpeg);">
+      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url(images/hero1.png);">
         <div class="breadcrumbs-custom-inner">
           <div class="container breadcrumbs-custom-container">
             <div class="breadcrumbs-custom-main">
@@ -100,35 +100,35 @@
           </div>
         </div>
       </section>
-      <section class="section novi-background section-sm">
+      <section class="section novi-background section-sm" style="background-color: black;">
         <div class="container">
           <div class="layout-bordered">
             <div class="layout-bordered-item wow-outer">
               <div class="layout-bordered-item-inner wow slideInUp">
                 <div class="icon novi-icon icon-lg mdi mdi-phone text-primary"></div>
-                <ul class="list-0">
-                  <li><a class="link-default" href="tel:+91 9906531735"> +91 9906531735</a></li>
-                  <li><a class="link-default" href="tel:+91 7051203505">+91 7051203505 </a></li>
+                <ul class="list-0" >
+                  <li><a class="link-default" style="color: white;" href="tel:+91 9906531735"> +91 9906531735</a></li>
+                  <li><a class="link-default" style="color: white;" href="tel:+91 7051203505">+91 7051203505 </a></li>
                       </ul>
                 </ul>
               </div>
             </div>
             <div class="layout-bordered-item wow-outer">
               <div class="layout-bordered-item-inner wow slideInUp">
-                <div class="icon novi-icon icon-lg mdi mdi-email text-primary"></div><a class="link-default" href="mailto: whiteshadowsxr@gmail.com">whiteshadowsxr@gmail.com</a>
+                <div class="icon novi-icon icon-lg mdi mdi-email text-primary"></div><a class="link-default" style="color: white;" href="mailto: whiteshadowsxr@gmail.com">whiteshadowsxr@gmail.com</a>
               </div>
             </div>
             <div class="layout-bordered-item wow-outer">
               <div class="layout-bordered-item-inner wow slideInUp">
                 <!-- <div class="unit-body"><a class="link-default" href="tel:#">7 Square Mall <br> Hyderpora, Srinagar
                 </a></div> -->
-                <div class="icon novi-icon icon-lg mdi mdi-map-marker text-primary"></div><a class="link-default" href="#"> 7 Square Mall, Hyderpora, Srinagar </a>
+                <div class="icon novi-icon icon-lg mdi mdi-map-marker text-primary"></div><a class="link-default" style="color: white;" href="#"> 7 Square Mall, Hyderpora, Srinagar </a>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <section class="section novi-background bg-gray-100">
+      <section class="section novi-background bg-gray-100" style="background-color: black;">
         <div class="range justify-content-xl-between">
           <div class="cell-xl-6 align-self-center container">
             <div class="row">
@@ -181,8 +181,9 @@
               </div>
             </div>
           </div>
-          <div class="cell-xl-5 height-fill wow fadeIn">
+          <div class="cell-xl-5 height-fill wow fadeIn" >
             <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d13224.154558421478!2d74.78258120930559!3d34.04287992056455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d34.0303146!2d74.79221989999999!4m5!1s0x38e18f6537e67b11%3A0x74d44e7d0de3c85c!2swhite%20shadow%20networks!3m2!1d34.0398875!2d74.7904167!5e0!3m2!1sen!2sin!4v1701947414469!5m2!1sen!2sin" 
+            style="border-radius: 10px;"
         width="600" 
         height="450" 
         style="border:0;" 
