--- a/index.html
+++ b/index.html
@@ -176,15 +176,15 @@
                     <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-phone"></span></div>
                     <div class="unit-body">
                       <ul class="list-0">
-                        <li><a class="link-default" href="tel:+91 9906531735"> +91 9906531735</a></li>
-                        <li><a class="link-default" href="tel:+91 7051203505">+91 7051203505 </a></li>
+                        <li><a class="link-default" style="color: black;" href="tel:+91 9906531735"> +91 9906531735</a></li>
+                        <li><a class="link-default" style="color: black;"  href="tel:+91 7051203505">+91 7051203505 </a></li>
                       </ul>
                     </div>
                   </article>
                   <article class="unit align-items-center">
                     <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-map-marker"></span>
                     </div>
-                    <div class="unit-body"><a class="link-default" href="tel:#">7 Square Mall <br> Hyderpora, Srinagar
+                    <div class="unit-body"><a class="link-default" style="color: black;" href="tel:#">7 Square Mall <br> Hyderpora, Srinagar
                       </a></div>
                   </article><a class="button button-gray-bordered button-winona" href="contacts.html">Request a call</a>
                 </div>
@@ -277,20 +277,40 @@
         <div class="row">
           <div class="col-md-12">
             <div class="owl-carousel owl-theme clients-carousel">
+              
               <div class="item box">
+                <img src="images/af.png" alt="client logo" class="client-img">
+              </div>
+              <!-- <div class="item box">
                 <img src="images/nathu.png" alt="client logo" class="client-img">
+              </div> -->
+              <div class="item box">
+                <img src="images/vc.png" alt="client logo" class="client-img">
               </div>
               <div class="item box">
-                <img src="images/vlcc.png" alt="client logo" class="client-img">
+                <img src="images/fox.png" alt="client logo" class="client-img">
+              </div>
+              <div class="item box">
+                <img src="images/pet.png" alt="client logo" class="client-img">
+              </div>
+              <div class="item box">
+                <img src="images/set.png" alt="client logo" class="client-img">
+              </div>
+              <div class="item box">
+                <img src="images/adore.png" alt="client logo" class="client-img">
+              </div>
+
+              <div class="item box">
+                <img src="images/imran.png" alt="client logo" class="client-img">
               </div>
 
 
               <div class="item box">
                 <img src="images/ring.png" alt="client logo" class="client-img">
               </div>
-              <div class="item box">
+              <!-- <div class="item box">
                 <img src="images/king.png" alt="client logo" class="client-img">
-              </div>
+              </div> -->
               <div class="item box">
                 <img src="images/hind.png" alt="client logo" class="client-img">
               </div>
