--- a/our-team.html
+++ b/our-team.html
@@ -45,7 +45,7 @@
 .sec-title .title{
     position:relative;
     font-size:30px;
-    color:#bd0000;
+    color: black;
     font-weight:700;
     margin-bottom:12px;
     text-transform:capitalize;
@@ -64,7 +64,7 @@
     top:0px;
     width:10px;
     height:2px;
-    background-color:black;
+    background-color:white;
 }
 
 .sec-title .separator:after{
@@ -74,7 +74,7 @@
     top:0px;
     width:10px;
     height:2px;
-    background-color:black;
+    background-color: white;
 }
 
 .sec-title .separator span{
@@ -85,7 +85,7 @@
     height:5px;
     margin-left:-5px;
     display:inline-block;
-    background-color:#bd0000;
+    background-color: white;
 }
 
 .sec-title h2{
@@ -101,7 +101,7 @@
     position:relative;
     font-size:14px;
     line-height:1.9em;
-    color:#555555;
+    color: black;
     margin-top:10px;
 }
 
@@ -123,7 +123,7 @@
 }
 
 .sec-title.light .separator span{
-    background-color:#ff9600;
+    background-color: white;
 }
 
 .sec-title.light .separator:before,
@@ -153,7 +153,7 @@
 
 .team-section .title-box h2{
     position: relative;
-    color: #222222;
+    color:  green;
     font-size: 36px;
     font-weight: 700;
     line-height: 1.3em;
@@ -228,7 +228,7 @@
 
 .team-block .inner-box .social-icons li a{
     position:relative;
-    color:#e40000;
+    color: black;
     font-size:18px;
     -webkit-transition: all 0.4s;
     -moz-transition: all 0.4s;
@@ -266,7 +266,7 @@
 
 .team-block .inner-box .lower-content h3{
     position:relative;
-    color:#bd0000;
+    color: black;
     font-size:18px;
     font-weight:700;
     line-height:1.3em;
@@ -274,7 +274,7 @@
 
 .team-block .inner-box .lower-content h3 a{
     position:relative;
-    color:#bd0000;
+    color: black;
     -webkit-transition: all 0.4s;
     -moz-transition: all 0.4s;
     -o-transition: all 0.4s;
@@ -284,7 +284,7 @@
 .team-block .inner-box .lower-content .designation{
     position:relative;
     margin-top:5px;
-    color:#777777;
+    color: black;
     font-size:20px;
 }
 
@@ -348,22 +348,22 @@
                       <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-phone"></span></div>
                       <div class="unit-body">
                         <ul class="list-0">
-                          <li><a class="link-default" href="tel:+91 9906531735"> +91 9906531735</a></li>
-                          <li><a class="link-default" href="tel:+91 7051203505">+91 7051203505 </a></li>
+                          <li><a class="link-default" style="color: black;" href="tel:+91 9906531735"> +91 9906531735</a></li>
+                          <li><a class="link-default" style="color: black;" href="tel:+91 7051203505">+91 7051203505 </a></li>
                       </ul>
                         </ul>
                       </div>
                     </article>
                     <article class="unit align-items-center">
                       <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-map-marker"></span></div>
-                      <div class="unit-body"><a class="link-default" href="tel:#">7 Square Mall <br> Hyderpora, Srinagar
+                      <div class="unit-body"><a class="link-default" style="color: black;" href="tel:#">7 Square Mall <br> Hyderpora, Srinagar
                       </a></div>
                     </article><a class="button button-gray-bordered button-winona" href="contacts.html">Request a call</a>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="rd-navbar-main-outer">
+            <div class="rd-navbar-main-outer" style="background-color: black;">
               <div class="rd-navbar-main">
                 <div class="rd-navbar-nav-wrap" id="rd-navbar-nav-wrap-1">
                   <!-- RD Navbar Nav-->
@@ -387,7 +387,7 @@
         </div>
       </header>
       <!-- Breadcrumbs -->
-      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url(images/Team2.webp);">
+      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url(images/hero1.png);">
         <div class="breadcrumbs-custom-inner">
           <div class="container breadcrumbs-custom-container">
             <div class="breadcrumbs-custom-main">
@@ -402,13 +402,13 @@
         </div>
       </section>
       <section>
-        <section class="team-page-section">
+        <section class="team-page-section" style="background-color: black;">
             <div class="container">
                 <!-- Sec Title -->
                 <div class="sec-title centered">
-                    <div class="title">Our Team</div>
-                    <div class="separator"><span></span></div>
-                    <h2>Meet Our Amazing Team</h2>
+                    <div class="title" style="color: white;">Our Team</div>
+                    <div class="separator" ><span></span></div>
+                    <h2 style="color: white;">Meet Our Amazing Team</h2>
                 </div>
     
                 <div class="row clearfix">
@@ -424,7 +424,7 @@
                                 <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                             </ul>
                             <div class="image">
-                                <a href="#"><img src="/images/amaan.jpg" alt="" /></a>
+                                <a href="#"><img src="/images/aman1.png" alt="" /></a>
                             </div>
                             <div class="lower-content">
                                 <h3><a href="#">Mohd Amaan </a></h3>
@@ -483,7 +483,7 @@
                                 <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                             </ul>
                             <div class="image" style="border-radius: 12px;">
-                                <a href="#" ><img src="/images/aquib.jpg" alt="" /></a>
+                                <a href="#" ><img src="/images/akki.jpeg" alt="" /></a>
                             </div>
                             <div class="lower-content">
                                 <h3><a href="#">Aquib</a></h3>
@@ -511,6 +511,25 @@
                             </div>
                         </div>
                     </div>
+                    <div class="team-block col-lg-4 col-md-6 col-sm-12">
+                      <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
+                          <ul class="social-icons">
+                              <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                              <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                              <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                              <!-- <li><a href="#"><i class="fab fa-skype"></i></a></li> -->
+  
+                              <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                          </ul>
+                          <div class="image">
+                              <a href="#"><img src="https://i.ibb.co/JC4skS0/team-animate.jpg" alt="" /></a>
+                          </div>
+                          <div class="lower-content">
+                              <h3><a href="#">Danish Javed Dar</a></h3>
+                              <div class="designation"> Photographer </div>
+                          </div>
+                      </div>
+                  </div>
                     <!-- Team Block -->
                     <!-- <div class="team-block col-lg-4 col-md-6 col-sm-12">
                         <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
