--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       text-align: center;
       padding: 1rem 0;
       color: black;
+      margin-top: -2px;
     }
 
     .Btns {
@@ -285,6 +286,21 @@
                 <img src="images/vc.png" alt="client logo" class="client-img">
               </div>
               <div class="item box">
+                <img src="images/pushp.png" alt="client logo" class="client-img">
+              </div>
+              <div class="item box">
+                <img src="images/koshur.png" alt="client logo" class="client-img">
+              </div>
+              <div class="item box">
+                <img src="images/lmn.png" alt="client logo" class="client-img">
+              </div>
+              <div class="item box">
+                <img src="images/cl1.png" alt="client logo" class="client-img">
+              </div>
+              <div class="item box">
+                <img src="images/noor.png" alt="client logo" class="client-img">
+              </div>
+              <div class="item box">
                 <img src="images/fox.png" alt="client logo" class="client-img">
               </div>
               <div class="item box">
@@ -303,7 +319,7 @@
 
 
               <div class="item box">
-                <img src="images/ring.png" alt="client logo" class="client-img">
+                <img src="images/tarana.jpg" alt="client logo" class="client-img">
               </div>
               <!-- <div class="item box">
                 <img src="images/king.png" alt="client logo" class="client-img">
@@ -312,10 +328,10 @@
                 <img src="images/hind.png" alt="client logo" class="client-img">
               </div>
               <div class="item box">
-                <img src="images/running.png" alt="client logo" class="client-img">
+                <img src="images/bjp.png" alt="client logo" class="client-img">
               </div>
               <div class="item box">
-                <img src="images/ting.png" alt="client logo" class="client-img">
+                <img src="images/sn.png" alt="client logo" class="client-img">
               </div>
               <div class="item box">
                 <img src="images/vin.png" alt="client logo" class="client-img" style="border-radius: 12px;">
@@ -535,8 +551,11 @@
             <!-- <div class="quote-classic-avatar"><img src="images/testimonials-person-1-96x96.jpg" alt="" width="96"
                   height="96" />
               </div> -->
+              <div class="quote-classic-avatar"><img src="images/cl1.png" alt="" width="96"
+                height="96" />
+            </div>
             <div class="quote-classic-info">
-              <cite class="quote-classic-cite">Speedo Fitness Club</cite>
+              <cite class="quote-classic-cite">Inox</cite>
               <p class="quote-classic-caption">Regular Client</p>
             </div>
           </div>
@@ -550,8 +569,11 @@
             <!-- <div class="quote-classic-avatar"><img src="images/testimonials-person-2-96x96.jpg" alt="" width="96"
                   height="96" />
               </div> -->
+              <div class="quote-classic-avatar"><img src="images/koshur.png" alt="" width="96"
+                height="96" />
+            </div>
             <div class="quote-classic-info">
-              <cite class="quote-classic-cite">Gedi & Grub</cite>
+              <cite class="quote-classic-cite">The Koshur World</cite>
               <p class="quote-classic-caption">Regular Client</p>
             </div>
           </div>
@@ -566,7 +588,7 @@
                   height="96" />
               </div> -->
             <div class="quote-classic-info">
-              <cite class="quote-classic-cite">Nathu Sweets</cite>
+              <cite class="quote-classic-cite">Glam Squad</cite>
               <p class="quote-classic-caption">Regular Client</p>
             </div>
           </div>
@@ -581,8 +603,11 @@
             <!-- <div class="quote-classic-avatar"><img src="images/testimonials-person-4-96x96.jpg" alt="" width="96"
                   height="96" />
               </div> -->
+              <div class="quote-classic-avatar"><img src="images/adore.png" alt="" width="96"
+                height="96" />
+            </div>
             <div class="quote-classic-info">
-              <cite class="quote-classic-cite">Wall Studio</cite>
+              <cite class="quote-classic-cite">Studio By Adore</cite>
               <p class="quote-classic-caption">Regular Client</p>
             </div>
           </div>
@@ -596,8 +621,11 @@
             <!-- <div class="quote-classic-avatar"><img src="images/testimonials-person-5-96x96.jpg" alt="" width="96"
                   height="96" />
               </div> -->
+              <div class="quote-classic-avatar"><img src="images/pet.png" alt="" width="96"
+                height="96" />
+            </div>
             <div class="quote-classic-info">
-              <cite class="quote-classic-cite">Vogue Studio</cite>
+              <cite class="quote-classic-cite">Pet Squad</cite>
               <p class="quote-classic-caption">Regular Client</p>
             </div>
           </div>
