--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                 <!-- <span class="icon">
                   <i class="fab fa-artstation"></i>
                 </span> -->
-                <h3 class="title ">Crisis Managent</h3>
+                <h3 class="title ">Crisis Management</h3>
                 <p class="description">In times of reputational risk, we provide swift and strategic crisis management
                   support, aiming to protect your brand's image and navigate sensitive situations effectively.</p>
                 <a href="our-services.html" class="learn-more">Learn More</a>
@@ -474,7 +474,7 @@
                   <i class="fas fa-laptop-code"></i>
                 </span> -->
                 <h3 class="title">Media
-                  Realtions</h3>
+                  Relations</h3>
                 <p class="description">We have built strong relationships with key media outlets and influencers,
                   enabling us to secure impactful coverage in print, digital, and broadcast media</p>
                 <a href="our-services.html" class="learn-more">Learn More</a>
