--- a/our-services.html
+++ b/our-services.html
@@ -306,7 +306,7 @@ background: linear-gradient(to bottom, #434343, #000000);
                 <div class="item">
                   <h4>Social Media Set-up & Management</h4>
                   <div class="icon"><img src="images/service-icon-02.png" alt=""></div>
-                  <p style="color: black">White Shadow helps you in setting up your Social/Cloud Image on all me the media platforms.</p>
+                  <p style="color: black">White Shadow helps you in setting up your Social/Cloud Image on allmthe media platforms.</p>
                 </div>
                 <div class="item">
                   <h4>Designing / Editing & Printing</h4>
@@ -368,15 +368,16 @@ background: linear-gradient(to bottom, #434343, #000000);
     <h3 class="pricingTable-subtitle" style=" margin-top: 8px; color: white;">Every plan has its own benefits.</h3>
   </div>
       <div class="pricing-table-container">
+
         <div class="table wow slideInLeft">
           <h2>Basic</h2>
           <p>The best plan for beginners</p>
-          <div class="price">18,000 INR/250 USD/Month</div>
+          <div class="price">11,499 INR/137 USD/Month</div>
   
           <div class="features">
             <ul>
-              <li>Ads Spend - Rs 10,000</li>
-              <li>Our Management Fee - 8,000</li>
+              <li>Ads Spend - Rs 6,899</li>
+              <li>Our Management Fee - 4,600</li>
               <li>Creation of Campaign - 1</li>
               <li>Account Management - 2</li>
             </ul>
@@ -384,6 +385,40 @@ background: linear-gradient(to bottom, #434343, #000000);
             <a href="#" class="btn">Choose Plan</a>
           </div>
         </div>
+        <div class="table wow slideInLeft">
+          <h2>Standard</h2>
+          <p>The best plan for beginners</p>
+          <div class="price">20,999 INR/249 USD/Month</div>
+  
+          <div class="features">
+            <ul>
+              <li>Ads Spend - Rs 12,599</li>
+              <li>Our Management Fee - 8,400</li>
+              <li>Creation of Campaign - 1</li>
+              <li>Account Management - 2</li>
+            </ul>
+  <a href="#" class="btn">Choose Plan</a>
+          </div>
+        </div>
+
+        <div class="table wow slideInRight">
+          <h2>Premium</h2>
+          <p>The best plan for premium users</p>
+          <div class="price">27,999 INR / 332 US</div>
+  
+          <div class="features">
+            <ul>
+              <li>Ads Spend - Rs 16,799</li>
+              <li>Our Management Fee - 11,200</li>
+              <li>Account Management - 5</li>
+              <li>Creation of Campaign - 5</li>
+            </ul>
+  
+            <a href="#" class="btn">Choose Plan</a>
+          </div>
+        </div>
+
+        
   
         <div class="table best-value wow slideInDown">
           <div class="tag-icon">
@@ -405,13 +440,13 @@ background: linear-gradient(to bottom, #434343, #000000);
               />
             </svg>
           </div>
-          <h2>Professional</h2>
-          <p>The best plan for intermediate Users</p>
-          <div class="price">35,000 INR/500 USD/Month</div>
+          <h2>Special</h2>
+          <p>The best plan for special users</p>
+          <div class="price">37,499 INR/444 USD/Month</div>
   
           <div class="features">
             <ul>
-              <li>Ads Spend - Rs 20,000</li>
+              <li>Ads Spend - Rs 22,499</li>
               <li>Our Management Fee - 15,000</li>
               <li>Account Management - 3</li>
               <li>Creation of Campaign - 3</li>
@@ -421,22 +456,7 @@ background: linear-gradient(to bottom, #434343, #000000);
           </div>
         </div>
   
-        <div class="table wow slideInRight">
-          <h2>Advanced</h2>
-          <p>The best plan for advanced users</p>
-          <div class="price">65,000 INR / 900 US</div>
-  
-          <div class="features">
-            <ul>
-              <li>Ads Spend - Rs 40,000</li>
-              <li>Our Management Fee - 25,000</li>
-              <li>Account Management - 5</li>
-              <li>Creation of Campaign - 5</li>
-            </ul>
-  
-            <a href="#" class="btn">Choose Plan</a>
-          </div>
-        </div>
+        
       </div>
     </div>
 
