--- a/our-team.html
+++ b/our-team.html
@@ -525,11 +525,30 @@
                               <a href="#"><img src="https://i.ibb.co/JC4skS0/team-animate.jpg" alt="" /></a>
                           </div>
                           <div class="lower-content">
-                              <h3><a href="#">Danish Javed Dar</a></h3>
-                              <div class="designation"> Photographer </div>
+                              <h3><a href="#">Mr Mursil</a></h3>
+                              <div class="designation">DOP</div>
                           </div>
                       </div>
                   </div>
+                  <div class="team-block col-lg-4 col-md-6 col-sm-12">
+                    <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
+                        <ul class="social-icons">
+                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <!-- <li><a href="#"><i class="fab fa-skype"></i></a></li> -->
+
+                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                        </ul>
+                        <div class="image">
+                            <a href="#"><img src="https://i.ibb.co/JC4skS0/team-animate.jpg" alt="" /></a>
+                        </div>
+                        <div class="lower-content">
+                            <h3><a href="#">Mr Rouf</a></h3>
+                            <div class="designation">Designer</div>
+                        </div>
+                    </div>
+                </div>
                     <!-- Team Block -->
                     <!-- <div class="team-block col-lg-4 col-md-6 col-sm-12">
                         <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
